--- a/blog/templates/blogs/post_list.html
+++ b/blog/templates/blogs/post_list.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Haley's blog</title>
+    </head>
 <body>
     <p>Hi there!</p>
     <p>It works!</p>
