--- a/blog/templates/blogs/base.html
+++ b/blog/templates/blogs/base.html
@@ -13,10 +13,12 @@
                 {% if user.is_authenticated %}
     <a href="{% url 'post_new' %}" class="top-menu">
         {% include './icons/file-earmark-plus.svg' %}
-    </a>
-{% endif %}
-                <h1><a href="/">Django Girls Blog</a></h1>
-            </div>
+    </a><p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+    {% else %}
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+    {% endif %}
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
         </header>
         <main class="content container">
             <div class="row">
