--- a/blog/templates/blogs/post_list.html
+++ b/blog/templates/blogs/post_list.html
@@ -8,6 +8,9 @@
             </time>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
+            <a href="
+
+            <a href="<div data-gb-custom-block data-tag="url" data-0='post_detail'></div>">Comments: {{ post.approved_comments.count }}</a>
         </article>
     {% endfor %}
 {% endblock %}
