--- a/blog/templates/blogs/base.html
+++ b/blog/templates/blogs/base.html
@@ -13,6 +13,9 @@
                 {% if user.is_authenticated %}
     <a href="{% url 'post_new' %}" class="top-menu">
         {% include './icons/file-earmark-plus.svg' %}
+        <a href="<div data-gb-custom-block data-tag="url" data-0='post_draft_list'></div>
+
+            " class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
     </a><p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
     {% else %}
         <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
